micro-service-helm/kubernates-setup/k8-gateways/gateways/monitoring-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-monitoring
  namespace: istio-ingress
spec:
  selector:
    istio: istio-ingress-monitoring # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
